# ingot

./: .gitignore  Dockerfile  README.md  demo.py  pyproject.toml  requirements.txt  test_upload.py
docs/: design.md  links.md
src/ingot/: __main__.py  ingot.py
tests/: test_upload.py
