[project]
name = "ingot"
description = "Minimal Artifact Storage Server"
requires-python = ">=3.13"

dynamic = ["version", "dependencies"]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", ]
build-backend = "setuptools.build_meta"

[project.scripts]
ingot = "ingot.__main__:main"


[tool.setuptools.dynamic]
version = { attr = "ingot.__version__" }
dependencies = { file = "requirements.txt" }

[tools.setuptools.packages.find]
where = ["src"]
